background no longer fixed on mobile to fix iphone view

--- a/css/style.css
+++ b/css/style.css
@@ -72,13 +72,24 @@
     width: 100%;
     height: auto;
 }
-
+@media only screen and (max-width: 767px) {
   .splash {
       background:url("../img/back.jpg") no-repeat fixed center bottom;
       background-size: cover;
+      background-attachment: scroll !important;
       color: #fff;
       height: 100vh;
   }
+}
+@media only screen and (min-width: 768px) {
+  .splash {
+      background:url("../img/back.jpg") no-repeat fixed center bottom;
+      background-size: cover;
+      background-attachment: fixed;
+      color: #fff;
+      height: 100vh;
+  }
+}
   
   .splash .container {
     padding-top: 15vh; /* No JS fallback*/
@@ -368,12 +379,26 @@
   }
 
   /* Contact */
+
+  
+@media only screen and (max-width: 767px) {
   .contact-me-container{
-      padding:3%;
-      background:url("../img/space3.jpg") no-repeat fixed center bottom;
-      background-size: cover;
-      height:auto;
-  }
+    padding:3%;
+    background:url("../img/space3.jpg") no-repeat fixed center bottom;
+    background-size: cover;
+    background-attachment: scroll !important;
+    height:auto;
+}
+}
+@media only screen and (min-width: 768px) {
+  .contact-me-container{
+    padding:3%;
+    background:url("../img/space3.jpg") no-repeat fixed center bottom;
+    background-size: cover;
+    background-attachment: fixed;
+    height:auto;
+}
+}
   .fa-user,.fa-at,.fa-phone
   {
     color:black;
@@ -442,10 +467,21 @@
   box-shadow: 0 4px 10px -2px rgba(0,0,0,1)
 }
 
-.tech-container{
-  background:url("../img/space5.jpg") no-repeat fixed center bottom;
-  background-size: cover;
+
+@media only screen and (max-width: 767px) {
+  .tech-container{
+    background:url("../img/space5.jpg") no-repeat fixed center bottom;
+    background-size: cover;
+    background-attachment: scroll !important;
+  }
 }
+@media only screen and (min-width: 768px) {
+  .tech-container{
+    background:url("../img/space5.jpg") no-repeat fixed center bottom;
+    background-size: cover;
+  }
+}
+
 
 .contact-content {
   max-width: 45em;
